--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-app",
   "version": "0.1.0",
-  "homepage": "https://github.io/WrenGilson/business-card",
+  "homepage": "https://WrenGilson.github.io/business-card",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
